--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "generate:sitemap": "node ./sitemap-generator/index.js",
     "lint": "npm run lint:js",
     "lint:js": "eslint --format=node_modules/eslint-formatter-pretty src modules test/e2e/cypress --ext js,jsx,ts,tsx",
-    "postinstall": "cp .env.development .env",
+    "postinstall": "cp .env.development .env && npm --prefix ./test/e2e install ./test/e2e ",
     "start": "webpack-dev-server --config webpack.development.js",
+    "start:acc": "cp .env.acceptance .env && webpack-dev-server --config webpack.development.js",
     "start:prod": "cp .env.production .env && webpack-dev-server --config webpack.development.js",
     "storybook": "start-storybook -p 6007",
     "test": "concurrently \"karma start\" \"jest\"",
+    "test:e2e": "npm --prefix ./test/e2e start ",
     "test:jest": "jest --coverage",
     "test:jest:watch": "npm run test:jest -- --watch --onlyChanged",
     "test:karma": "karma start",
