--- a/test/e2e/Dockerfile
+++ b/test/e2e/Dockerfile
@@ -1,4 +1,4 @@
-FROM cypress/base:10.16.0
+FROM cypress/base:latest
 RUN apt-get update && \
     apt-get install -y \
       netcat && \
@@ -11,8 +11,6 @@ COPY package.json package-lock.json  /home/
 
 # Install all NPM dependencies, and:
 #  * Setting `CI=true` to stop cypress install progress from flooding the CI log
-RUN npm config set registry https://nexus.data.amsterdam.nl/repository/npm-group/ && \
-    CI=true npm ci && \
-    npm cache clean --force
+RUN CI=true npm ci
 
 COPY . /home/
