--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "prettier": "prettier --write \"./**/*.{js,jsx,ts,tsx,scss,css}\""
   },
   "dependencies": {
-    "@datapunt/amsterdam-react-maps": "^0.1.3-alpha.3",
+    "@datapunt/amsterdam-react-maps": "^0.2.4-alpha.0",
     "@datapunt/asc-assets": "0.19.2-alpha.66",
     "@datapunt/asc-ui": "0.19.2-alpha.66",
     "@datapunt/matomo-tracker-js": "0.1.4",
     "@datapunt/matomo-tracker-react": "0.1.4",
     "@datapunt/react-maps": "^0.8.0",
     "@sentry/browser": "5.15.5",
+    "@types/leaflet": "^1.5.12",
+    "@types/leaflet-draw": "^1.0.2",
     "angular": "1.7.9",
     "angular-aria": "~1.7.9",
     "angular-i18n": "~1.7.9",
@@ -55,7 +57,6 @@
     "isomorphic-fetch": "2.2.1",
     "json-api-normalize": "1.1.5",
     "leaflet": "1.6.0",
-    "leaflet-draw": "1.0.4",
     "leaflet-rotatedmarker": "0.2.0",
     "leaflet.markercluster": "1.4.1",
     "leaflet.nontiledlayer": "1.0.8",
