--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.0",
-    "@datapunt/amsterdam-react-maps": "^0.2.7",
-    "@datapunt/asc-assets": "^0.19.2-beta.2",
-    "@datapunt/asc-ui": "^0.19.2-beta.2",
+    "@datapunt/arm-cluster": "^0.2.8-alpha.0",
+    "@datapunt/arm-core": "^0.2.8-alpha.0",
+    "@datapunt/arm-draw": "^0.2.8-alpha.0",
+    "@datapunt/arm-nontiled": "^0.2.8-alpha.0",
+    "@datapunt/asc-assets": "^0.20.0",
+    "@datapunt/asc-ui": "^0.20.0",
     "@datapunt/matomo-tracker-js": "0.1.4",
     "@datapunt/matomo-tracker-react": "0.1.4",
-    "@datapunt/react-maps": "^0.8.0",
+    "@datapunt/react-maps": "^0.8.2-alpha.0",
     "@sentry/browser": "5.15.5",
     "@types/leaflet": "^1.5.12",
     "@types/leaflet-draw": "^1.0.2",
