--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.2",
-    "@datapunt/arm-cluster": "^0.2.8-alpha.1",
-    "@datapunt/arm-core": "^0.2.8-alpha.1",
-    "@datapunt/arm-draw": "^0.2.8-alpha.1",
-    "@datapunt/arm-nontiled": "^0.2.8-alpha.1",
-    "@datapunt/asc-assets": "^0.19.2-alpha.6",
+    "@datapunt/arm-cluster": "^0.2.8-alpha.8",
+    "@datapunt/arm-core": "^0.2.8-alpha.8",
+    "@datapunt/arm-draw": "^0.2.8-alpha.8",
+    "@datapunt/arm-nontiled": "^0.2.8-alpha.8",
+    "@datapunt/asc-assets": "^0.20.0",
     "@datapunt/asc-ui": "^0.20.1-alpha.14",
     "@datapunt/matomo-tracker-js": "0.1.5",
     "@datapunt/matomo-tracker-react": "0.1.4",
@@ -121,6 +121,7 @@
     "@types/karma": "^5.0.0",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.0.11",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-first-router-link": "^1.4.4",
     "@types/storybook__react": "^5.2.1",
