Add detail screen for precario taxes

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,5 @@ NODE_ENV=development
 IIIF_ROOT=https://acc.images.data.amsterdam.nl/
 API_ROOT=https://acc.api.data.amsterdam.nl/
 CMS_ROOT=https://acc.cms.data.amsterdam.nl/
-GRAPHQL_ENDPOINT=https://acc.api.data.amsterdam.nl/cms_search/graphql/
+GRAPHQL_ENDPOINT=http://localhost:8080/cms_search/graphql/
 ROOT=http://localhost:3000/
