Refactored beta map

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react",
+    "resolveJsonModule": true,
     "allowJs": true,
     "esModuleInterop": true,
     "downlevelIteration": true,
