Added nginx js caching

--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,10 @@
+proxy_cache_path /tmp/nginx levels=1:2 keys_zone=js_zone:10m inactive=1d max_size=30m;
+proxy_cache_key "$scheme$request_method$host$request_uri";
+
+map $sent_http_content_type $expires {
+    ~cache/                    max;
+}
+
 server {
     listen       80;
     server_name  localhost;
@@ -31,9 +38,16 @@ server {
     gzip_proxied        expired no-cache no-store private auth;
     gzip_vary           on;
 
+    expires $expires;
+
     location ~* \.(jpg|jpeg|png|gif|woff2|woff|ico|css|js)$ {
       expires 365d;
       add_header Cache-Control "public, no-transform";
+    }
+
+    location ~* \.()$ {
+      proxy_cache js_zone;
+      add_header X-Proxy-Cache $upstream_cache_status;
     }
 
     absolute_redirect off;
