Refactored HeaderSearch + minor UI improvements

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@turf/turf": "^5.1.6",
     "@types/file-saver": "^2.0.1",
     "@types/openseadragon": "^2.4.5",
+    "@types/react-router": "^5.1.8",
     "angular": "1.8.0",
     "angular-aria": "~1.8.0",
     "angular-i18n": "~1.7.9",
@@ -89,6 +90,7 @@
     "react-leaflet-markercluster": "1.1.8",
     "react-redux": "7.2.1",
     "react-resize-detector": "5.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "4.0.5",
     "redux-first-router": "2.1.5",
