--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "lodash.debounce": "^4.0.8",
     "lodash.defer": "^4.1.0",
     "lodash.isequal": "^4.5.0",
-    "lodash.throttle": "^4.1.1",
     "marked": "^1.2.0",
     "marzipano": "^0.9.1",
     "objectFitPolyfill": "2.3.0",
@@ -124,7 +123,6 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.defer": "^4.1.6",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/lodash.throttle": "^4.1.6",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.11.2",
     "@types/proj4": "^2.5.0",
@@ -151,6 +149,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
+    "canvas": "^2.6.1",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^6.2.0",
