--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "lodash.defer": "^4.1.0",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
-    "marked": "^1.2.0",
     "marzipano": "^0.9.1",
     "objectFitPolyfill": "2.3.0",
     "openseadragon": "2.4.2",
@@ -91,7 +90,6 @@
     "redux-first-router-link": "2.1.1",
     "redux-first-router-restore-scroll": "1.2.2",
     "redux-saga": "0.16.0",
-    "remove-markdown": "0.3.0",
     "reselect": "4.0.0",
     "styled-components": "^5.2.0",
     "urql": "^1.10.1",
@@ -113,6 +111,7 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/react-hooks": "3.4.2",
     "@types/body-scroll-lock": "^2.6.1",
+    "@types/classnames": "^2.2.10",
     "@types/cssnano": "^4.0.0",
     "@types/enzyme": "^3.10.7",
     "@types/geojson": "^7946.0.7",
@@ -133,7 +132,6 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-first-router-link": "^1.4.4",
     "@types/redux-mock-store": "^1.0.2",
-    "@types/remove-markdown": "^0.1.1",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.3",
     "@types/svgo": "^1.3.3",
