--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "generate:sitemap": "node ./sitemap-generator/index.js",
     "lint": "npm run lint:js",
     "lint:js": "eslint --format=node_modules/eslint-formatter-pretty src modules test/e2e/cypress --ext js,jsx,ts,tsx",
-    "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack-dev-server --config webpack.dev.ts",
-    "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack-dev-server --config webpack.prod.ts",
+    "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
+    "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
     "storybook": "start-storybook -p 6007",
     "test": "concurrently \"npm run test:karma\" \"jest\"",
     "test:jest": "jest --coverage",
