--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
     "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
     "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
     "storybook": "start-storybook -p 6007",
-    "test": "concurrently \"npm run test:karma\" \"jest\"",
-    "test:jest": "jest --coverage",
-    "test:jest:watch": "npm run test:jest -- --watch --onlyChanged",
-    "test:karma": "cross-env TS_NODE_TRANSPILE_ONLY=true karma start",
-    "test:karma:watch": "npm run test:karma -- --no-single-run",
+    "test": "jest --coverage",
+    "test:watch": "npm run test -- --watch --onlyChanged",
     "prettier": "prettier --write \"./**/*.{js,jsx,ts,tsx,scss,css}\"",
     "analyze:modern": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack --config webpack.analyze.ts --env.config=modern",
     "analyze:legacy": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack --config webpack.analyze.ts --env.config=legacy"
@@ -43,16 +40,10 @@
     "@turf/turf": "^5.1.6",
     "@types/file-saver": "^2.0.1",
     "@types/openseadragon": "^2.4.5",
-    "angular": "1.8.0",
-    "angular-aria": "~1.8.1",
-    "angular-i18n": "~1.7.9",
-    "angular-sanitize": "~1.8.1",
-    "bbga_visualisatie_d3": "git+https://github.com/Amsterdam/bbga_visualisatie_d3.git#master",
     "body-scroll-lock": "^3.1.5",
     "classnames": "2.2.6",
     "core-js": "3.6.5",
     "custom-event-polyfill": "^1.0.7",
-    "d3": "3.5.17",
     "escape-string-regexp": "^4.0.0",
     "file-saver": "^2.0.2",
     "graphql": "^15.3.0",
@@ -76,7 +67,6 @@
     "proj4leaflet": "1.0.2",
     "prop-types": "15.7.2",
     "react": "16.14.0",
-    "react-angular": "git+https://github.com/Amsterdam/react-angular.git#master",
     "react-dom": "16.14.0",
     "react-helmet": "6.1.0",
     "react-leaflet": "1.9.1",
@@ -100,7 +90,6 @@
     "@babel/preset-env": "^7.12.0",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@metahub/karma-jasmine-jquery": "4.0.1",
     "@storybook/addon-a11y": "^6.0.26",
     "@storybook/addon-knobs": "^6.0.26",
     "@storybook/addon-storysource": "^6.0.26",
@@ -115,7 +104,6 @@
     "@types/enzyme": "^3.10.7",
     "@types/geojson": "^7946.0.7",
     "@types/jest": "^26.0.14",
-    "@types/karma": "^5.0.0",
     "@types/leaflet": "^1.5.19",
     "@types/leaflet-draw": "^1.0.3",
     "@types/leaflet-rotatedmarker": "^0.2.1",
@@ -141,7 +129,6 @@
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "angular-mocks": "~1.8.1",
     "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -188,15 +175,6 @@
     "jest-environment-node": "26.5.2",
     "jest-fetch-mock": "3.0.3",
     "jest-styled-components": "7.0.3",
-    "karma": "5.2.3",
-    "karma-babel-preprocessor": "8.0.1",
-    "karma-coverage": "2.0.3",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-mocha-reporter": "2.2.5",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-sourcemap-loader": "0.3.8",
-    "karma-webpack": "4.0.2",
     "mini-css-extract-plugin": "^1.0.0",
     "postcss": "^8.1.2",
     "postcss-loader": "^4.0.4",
