[DI-1194] Coverage on javascript and typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "./src/**/*"
   ],
   "compilerOptions": {
+    "inlineSourceMap": true,
     "strict": true,
     "jsx": "react",
     "allowJs": true,
