--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "storybook": "start-storybook -p 6007",
     "pretest": "rimraf ./coverage ./coverage-legacy",
     "test": "concurrently \"npm run test:karma\" \"npm run test:jest\"",
-    "test:jest": "npx jest --coverage",
-    "test:jest:watch": "npx jest --watch --onlyChanged",
+    "test:jest": "jest --coverage",
+    "test:jest:watch": "jest --watch --onlyChanged",
     "test:karma": "cross-env TS_NODE_TRANSPILE_ONLY=true karma start",
     "test:karma:watch": "npm run test:karma -- --no-single-run",
     "prettier": "prettier --write \"./**/*.{js,jsx,ts,tsx,scss,css}\"",
