--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deploy-storybook": "storybook-to-ghpages",
     "generate:sitemap": "node ./sitemap-generator/index.js",
     "lint": "npm run lint:js",
-    "lint:js": "eslint --format=node_modules/eslint-formatter-pretty src modules test/e2e/cypress --ext js,jsx,ts,tsx",
+    "lint:js": "eslint --format=node_modules/eslint-formatter-pretty src test/e2e/cypress --ext js,jsx,ts,tsx",
     "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
     "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
     "storybook": "start-storybook -p 6007",
