--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "@types/leaflet": "^1.5.19",
     "@types/leaflet-draw": "^1.0.3",
     "@types/leaflet-rotatedmarker": "^0.2.1",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.defer": "^4.1.6",
     "@types/lodash.isequal": "^4.5.5",
@@ -200,6 +201,7 @@
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.8",
     "karma-webpack": "4.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.1.1",
     "postcss": "^8.1.3",
     "postcss-loader": "^4.0.4",
