--- a/package.json
+++ b/package.json
@@ -190,7 +190,7 @@
     "jest-environment-jsdom": "26.6.1",
     "jest-environment-jsdom-global": "2.0.4",
     "jest-environment-node": "26.6.1",
-    "jest-fetch-mock": "3.0.3",
+    "jest-fetch-mock": "^3.0.3",
     "jest-styled-components": "7.0.3",
     "karma": "5.2.3",
     "karma-babel-preprocessor": "8.0.1",
@@ -203,6 +203,7 @@
     "karma-webpack": "4.0.2",
     "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.2.0",
+    "msw": "^0.21.3",
     "postcss": "^8.1.4",
     "postcss-loader": "^4.0.4",
     "prettier": "2.1.2",
@@ -237,7 +238,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint"
+      "eslint --ext js,jsx,ts,tsx"
     ],
     "*.scss": [
       "prettier --write"
