Test env config

--- a/package.json
+++ b/package.json
@@ -238,7 +238,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --ext js,jsx,ts,tsx"
+      "eslint"
     ],
     "*.scss": [
       "prettier --write"
