--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.defer": "^4.1.0",
     "lodash.isequal": "^4.5.0",
+    "marked": "^1.2.2",
     "marzipano": "^0.9.1",
     "objectFitPolyfill": "2.3.0",
     "openseadragon": "2.4.2",
@@ -111,6 +112,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.defer": "^4.1.6",
     "@types/lodash.isequal": "^4.5.5",
+    "@types/marked": "^1.1.0",
     "@types/mini-css-extract-plugin": "^1.2.1",
     "@types/node": "^14.14.6",
     "@types/openseadragon": "^2.4.5",
