- Includes `msw` package for mocking requests in tests - Adds request handlers - Adds several fixtures

--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@types/cssnano": "^4.0.0",
     "@types/enzyme": "^3.10.7",
     "@types/geojson": "^7946.0.7",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.15",
     "@types/karma": "^5.0.0",
     "@types/leaflet": "^1.5.19",
@@ -190,7 +191,7 @@
     "jest-environment-jsdom": "26.6.1",
     "jest-environment-jsdom-global": "2.0.4",
     "jest-environment-node": "26.6.1",
-    "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.3",
     "jest-styled-components": "7.0.3",
     "karma": "5.2.3",
     "karma-babel-preprocessor": "8.0.1",
