--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@types/body-scroll-lock": "^2.6.1",
     "@types/classnames": "^2.2.10",
     "@types/cssnano": "^4.0.0",
+    "@types/dotenv-webpack": "^5.0.0",
     "@types/enzyme": "^3.10.7",
     "@types/geojson": "^7946.0.7",
     "@types/jest": "^26.0.15",
@@ -157,6 +158,7 @@
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
     "cssnano": "^4.1.10",
+    "dotenv-webpack": "^5.0.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "enzyme-to-json": "3.6.1",
