Removes webpack plugin

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "generate:sitemap": "node ./sitemap-generator/index.js",
     "lint": "npm run lint:js",
     "lint:js": "eslint --format=node_modules/eslint-formatter-pretty src test/e2e/cypress --ext js,jsx,ts,tsx",
-    "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
-    "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
+    "__start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
+    "start": "cross-env NODE_ENV=development node server -- --port=3001",
+    "__start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
+    "start:prod": "cross-env BABEL_ENV=production NODE_ENV=production node server",
     "storybook": "start-storybook -p 6007",
     "test": "jest --coverage",
     "test:watch": "npm run test -- --watch --onlyChanged",
@@ -146,7 +148,6 @@
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
-    "dotenv-webpack": "^5.0.1",
     "enzyme": "3.11.0",
     "enzyme-to-json": "3.6.1",
     "eslint": "^7.12.1",
