--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "generate:sitemap": "node ./sitemap-generator/index.js",
     "lint": "npm run lint:js",
     "lint:js": "eslint --format=node_modules/eslint-formatter-pretty src test/e2e/cypress --ext js,jsx,ts,tsx",
-    "__start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
-    "start": "cross-env NODE_ENV=development node server -- --port=3001",
-    "__start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
-    "start:prod": "cross-env BABEL_ENV=production NODE_ENV=production node server",
+    "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
+    "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
     "storybook": "start-storybook -p 6007",
     "test": "jest --coverage",
     "test:watch": "npm run test -- --watch --onlyChanged",
