--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "@types/webpack-bundle-analyzer": "^3.9.0",
     "@types/webpack-dev-server": "^3.11.1",
     "@types/webpack-merge": "^4.1.5",
+    "@types/workbox-webpack-plugin": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
@@ -198,7 +199,8 @@
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "5.3.0"
+    "webpack-merge": "5.3.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "engines": {
     "node": "^12"
