--- a/nginx.conf
+++ b/nginx.conf
@@ -29,11 +29,11 @@ http {
 
     add_header Content-Security-Policy
       "default-src 'self';
-      connect-src 'self' https://*.data.amsterdam.nl;
+      connect-src 'self' https://*.data.amsterdam.nl localhost;
       font-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl fast.fonts.net;
       frame-src 'self' blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io;
       media-src 'self' https://*.data.amsterdam.nl;
-      img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://data.amsterdam.nl https://*.data.amsterdam.nl https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl;
+      img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://data.amsterdam.nl https://*.data.amsterdam.nl https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl localhost;
       script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl;
       style-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl fast.fonts.net;";
 }
