--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
   // This config file is only used by Jest.
   // For builds that go into the bundle see the WebPack configuration.
   "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-nullish-coalescing-operator"
+  ]
 }
