--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "postcss-loader": "^4.1.0",
     "prettier": "2.2.0",
     "prop-types": "15.7.2",
+    "react-test-renderer": "^17.0.1",
     "redux-mock-store": "1.5.4",
     "redux-saga-test-plan": "3.7.0",
     "rimraf": "3.0.2",
