Changed local nginx config

--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -9,7 +9,6 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -21,7 +20,6 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
     keepalive_timeout  65;
 
@@ -30,7 +28,7 @@ http {
     add_header Content-Security-Policy
       "default-src 'self';
       connect-src 'self' https://*.data.amsterdam.nl localhost;
-      font-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl fast.fonts.net localhost;
+      font-src 'self' https://static.amsterdam.nl fast.fonts.net;
       frame-src 'self' blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io;
       media-src 'self' https://*.data.amsterdam.nl;
       img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl localhost;
