--- a/package.json
+++ b/package.json
@@ -77,8 +77,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
@@ -94,6 +92,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/react-hooks": "3.4.2",
     "@turf/turf": "^5.1.6",
+    "@types/babel__preset-env": "^7.9.1",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/classnames": "^2.2.11",
     "@types/cssnano": "^4.0.0",
@@ -138,6 +137,7 @@
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.4.0",
+    "core-js": "^3.8.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
@@ -176,8 +176,8 @@
     "mini-css-extract-plugin": "^1.3.2",
     "postcss": "^8.2.0",
     "postcss-loader": "^4.1.0",
-    "prop-types": "15.7.2",
     "prettier": "2.2.1",
+    "prop-types": "15.7.2",
     "react-test-renderer": "17.0.1",
     "redux-mock-store": "1.5.4",
     "redux-saga-test-plan": "3.7.0",
