Modified no_support.html and added GIF

--- a/default.conf
+++ b/default.conf
@@ -59,6 +59,11 @@ server {
         root   /usr/share/nginx/html;
     }
 
+    location /no-support {
+        index no_support.html;
+        try_files $uri $uri/ /no_support.html;
+    }
+
     location /niet-gevonden {
         return 404;
     }
