--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "@types/redux-first-router-link": "^1.4.4",
     "@types/redux-mock-store": "^1.0.2",
     "@types/storybook__react": "^5.2.1",
-    "@types/styled-components": "^5.1.4",
+    "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
     "@types/terser-webpack-plugin": "^5.0.2",
     "@types/uuid": "^8.3.0",
@@ -137,7 +137,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.4.0",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
@@ -162,7 +162,6 @@
     "html-webpack-plugin": "^4.5.0",
     "husky": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "imports-loader": "^0.8.0",
     "isomorphic-fetch": "3.0.0",
     "jasmine-core": "3.6.0",
     "jest": "26.6.3",
@@ -184,17 +183,17 @@
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "svg-spritemap-webpack-plugin": "3.5.10",
-    "terser-webpack-plugin": "^4.2.3",
+    "svg-spritemap-webpack-plugin": "^3.8.2",
+    "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "url-loader": "4.1.1",
-    "webpack": "4.44.2",
+    "webpack": "^5.11.0",
     "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "5.4.0"
+    "webpack-merge": "^5.7.3"
   },
   "engines": {
     "node": "^14"
