--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-resize-detector": "5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-first-router": "2.1.5",
     "redux-first-router-link": "2.1.1",
     "redux-first-router-restore-scroll": "1.2.2",
@@ -113,6 +114,7 @@
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-first-router-link": "^1.4.4",
+    "@types/redux-first-router-restore-scroll": "^1.2.1",
     "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
