--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "lint-staged": "10.5.3",
     "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "msw": "^0.25.0",
     "postcss": "^8.2.2",
     "postcss-loader": "^4.1.0",
     "prettier": "2.2.1",
