--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "git diff src/api | grep -e '--' >/dev/null && npm run generate:api-index && lint-staged",
+      "pre-commit": "lint-staged && git diff src/api | grep -e '--' >/dev/null && npm run generate:api-index || echo 0",
       "post-merge": "./scripts/post-merge.sh"
     }
   },
