--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
   ],
   "compilerOptions": {
     "strict": true,
+    "target": "ES2020",
+    "module": "es2020",
+    "moduleResolution": "node",
     "jsx": "react-jsx",
     "allowJs": true,
     "esModuleInterop": true,
