--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@types/redux-first-router-link": "^1.4.4",
     "@types/redux-first-router-restore-scroll": "^1.2.1",
     "@types/redux-mock-store": "^1.0.2",
+    "@types/resize-observer-browser": "^0.1.5",
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
     "@types/terser-webpack-plugin": "^5.0.2",
