--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,12 @@ services:
       - IIIF_ROOT=https://images.data.amsterdam.nl/
       - GRAPHQL_ENDPOINT=https://api.data.amsterdam.nl/cms_search/graphql/
       - ROOT=http://localhost:3000/
+
+  keycloak:
+    image: jboss/keycloak
+    command: '-b 0.0.0.0 -Djboss.http.port=8080'
+    ports:
+      - '8080:8080'
+    environment:
+      - KEYCLOAK_USER=admin
+      - KEYCLOAK_PASSWORD=admin
