--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "jest-environment-jsdom-global": "2.0.4",
     "jest-environment-node": "26.6.2",
     "jest-localstorage-mock": "^2.4.6",
-    "jest-styled-components": "7.0.3",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "10.5.4",
     "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.7",
