--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/classnames": "^2.2.11",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/cssnano": "^4.0.0",
+    "@types/cypress": "^1.1.3",
     "@types/enzyme": "^3.10.7",
     "@types/file-saver": "^2.0.1",
     "@types/geojson": "^7946.0.7",
@@ -141,7 +142,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "cssnano": "^4.1.10",
-    "cypress": "^6.4.0",
+    "cypress": "^6.5.0",
     "enzyme": "3.11.0",
     "enzyme-to-json": "3.6.1",
     "eslint": "^7.20.0",
@@ -173,7 +174,7 @@
     "lint-staged": "10.5.4",
     "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.7",
-    "msw": "^0.26.2",
+    "msw": "^0.27.0-beta",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
     "prettier": "2.2.1",
@@ -184,6 +185,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
