--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "**/*.test.tsx"
   ],
   "compilerOptions": {
+    "baseUrl": ".",
     "noEmit": true,
     "strict": true,
     "target": "ES2020",
