--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "types": ["cypress"]
+    "types": ["cypress", "node"],
+    "noEmit": true,
+    "strict": true,
+    "target": "ES5",
+    "module": "ES2020",
   },
   "include": [
     "**/*.ts"
