--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/enzyme": "^3.10.7",
     "@types/file-saver": "^2.0.1",
     "@types/geojson": "^7946.0.7",
+    "@types/glob": "^7.1.3",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.20",
     "@types/leaflet": "^1.5.23",
