--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "@types/enzyme": "^3.10.7",
     "@types/file-saver": "^2.0.1",
     "@types/geojson": "^7946.0.7",
-    "@types/glob": "^7.1.3",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.20",
     "@types/leaflet": "^1.5.23",
@@ -178,7 +177,7 @@
     "lint-staged": "10.5.4",
     "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.7",
-    "msw": "^0.27.0-beta",
+    "msw": "^0.27.0",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
     "prettier": "2.2.1",
