--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "graphql-tag": "^2.11.0",
     "history": "4.10.1",
     "json-api-normalize": "1.1.5",
+    "keycloak-js": "^12.0.3",
     "leaflet": "1.7.1",
     "leaflet-draw": "1.0.0",
     "leaflet-rotatedmarker": "0.2.0",
