Upgrade Amsterdam React Maps to latest version

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "analyze": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack --config webpack.analyze.ts"
   },
   "dependencies": {
-    "@amsterdam/arm-cluster": "^0.4.0",
-    "@amsterdam/arm-core": "^0.4.0",
-    "@amsterdam/arm-draw": "^0.4.1-alpha.125",
-    "@amsterdam/arm-nontiled": "^0.4.0",
+    "@amsterdam/arm-cluster": "^0.5.1",
+    "@amsterdam/arm-core": "^0.5.1",
+    "@amsterdam/arm-draw": "^0.5.1",
+    "@amsterdam/arm-nontiled": "^0.5.1",
     "@amsterdam/asc-assets": "^0.28.0",
     "@amsterdam/asc-ui": "^0.28.0",
-    "@amsterdam/react-maps": "^0.10.0",
+    "@amsterdam/react-maps": "^0.12.0",
     "@babel/runtime-corejs3": "^7.12.13",
     "@datapunt/matomo-tracker-js": "^0.4.0",
     "@datapunt/matomo-tracker-react": "^0.4.0",
