Allow all amsterdam.nl domains in CSP to prevent blocking Keycloak

--- a/nginx.csp.dev.conf
+++ b/nginx.csp.dev.conf
@@ -1,6 +1,6 @@
 add_header Content-Security-Policy
   "default-src 'self';
-  connect-src 'self' https://*.data.amsterdam.nl localhost localhost:8080;
+  connect-src 'self' https://*.amsterdam.nl localhost localhost:8080;
   font-src 'self' https://static.amsterdam.nl fast.fonts.net;
   frame-src 'self' data: localhost:8080 blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io;
   media-src 'self' https://*.data.amsterdam.nl;
