--- a/nginx.csp.prod.conf
+++ b/nginx.csp.prod.conf
@@ -1,6 +1,6 @@
 add_header Content-Security-Policy
   "default-src 'self';
-  connect-src 'self' https://*.data.amsterdam.nl;
+  connect-src 'self' https://*.amsterdam.nl;
   font-src 'self' https://static.amsterdam.nl https://fast.fonts.net;
   frame-src 'self' blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io;
   media-src 'self' https://*.data.amsterdam.nl;
