--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@amsterdam/asc-assets": "^0.28.0",
     "@amsterdam/asc-ui": "^0.28.0",
     "@amsterdam/react-maps": "^0.12.0",
+    "@amsterdam/use-promise": "^1.0.0",
     "@babel/runtime-corejs3": "^7.12.13",
     "@datapunt/matomo-tracker-js": "^0.4.0",
     "@datapunt/matomo-tracker-react": "^0.4.0",
