--- a/nginx.csp.dev.conf
+++ b/nginx.csp.dev.conf
@@ -2,7 +2,7 @@ add_header Content-Security-Policy
   "default-src 'self';
   connect-src 'self' https://*.amsterdam.nl localhost localhost:8080;
   font-src 'self' https://static.amsterdam.nl fast.fonts.net;
-  frame-src 'self' data: localhost:8080 blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io;
+  frame-src 'self' data: localhost:8080 blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io https://vimeo.com;
   media-src 'self' https://*.data.amsterdam.nl;
   img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl localhost;
   script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl;
