--- a/nginx.csp.prod.conf
+++ b/nginx.csp.prod.conf
@@ -2,7 +2,7 @@ add_header Content-Security-Policy
   "default-src 'self';
   connect-src 'self' https://*.amsterdam.nl;
   font-src 'self' https://static.amsterdam.nl https://fast.fonts.net;
-  frame-src 'self' blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io;
+  frame-src 'self' blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io https://vimeo.com;
   media-src 'self' https://*.data.amsterdam.nl;
   img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://data.amsterdam.nl https://*.data.amsterdam.nl https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl;
   script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl;
