--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "graphql-tag": "^2.11.0",
     "history": "4.10.1",
     "json-api-normalize": "1.1.5",
+    "jwt-decode": "^3.1.2",
     "keycloak-js": "^12.0.4",
     "leaflet": "1.7.1",
     "leaflet-draw": "1.0.0",
@@ -176,6 +177,7 @@
     "jest-environment-node": "26.6.2",
     "jest-localstorage-mock": "^2.4.6",
     "jest-styled-components": "^7.0.3",
+    "jsontokens": "^3.0.0",
     "lint-staged": "10.5.4",
     "lodash.clonedeep": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.7",
