--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Data en Informatie",
+  "name": "Data verkenner",
   "theme_color": "#ec0000",
   "background_color": "#ec0000",
   "display": "browser",
