Simplify linting script by removing redundant task

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "clean:dirs": "rimraf ./node_modules ./coverage ./coverage-legacy ./dist ./build",
     "deploy:demo": "./scripts/deploy-demo.sh",
     "generate:sitemap": "node ./sitemap-generator/index.js",
-    "lint": "npm run lint:js",
-    "lint:js": "eslint --format=node_modules/eslint-formatter-pretty ./ --ext js,jsx,ts,tsx",
+    "lint": "eslint --format=node_modules/eslint-formatter-pretty ./ --ext js,jsx,ts,tsx",
     "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
     "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
