Added more CORS rules for usabilla

--- a/nginx.csp.dev.conf
+++ b/nginx.csp.dev.conf
@@ -1,9 +1,9 @@
 add_header Content-Security-Policy
   "default-src 'self';
-  connect-src 'self' https://*.amsterdam.nl localhost localhost:8080;
-  font-src 'self' https://static.amsterdam.nl fast.fonts.net;
+  connect-src 'self' https://*.amsterdam.nl https://*.usabilla.com localhost localhost:8080;
+  font-src 'self' https://static.amsterdam.nl fast.fonts.net https://*.cloudfront.net;
   frame-src 'self' data: localhost:8080 blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io https://vimeo.com https://*.vimeo.com;
   media-src 'self' https://*.data.amsterdam.nl https://*.vimeo.com;
-  img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl https://*.cloudfront.net localhost;
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl https://w.usabilla.com;
-  style-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl fast.fonts.net;";
+  img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl https://*.cloudfront.net https://*.usabilla.com localhost;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl https://*.usabilla.com;
+  style-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl fast.fonts.net https://*.cloudfront.net;";
