--- a/nginx.csp.prod.conf
+++ b/nginx.csp.prod.conf
@@ -1,9 +1,9 @@
 add_header Content-Security-Policy
   "default-src 'self';
-  connect-src 'self' https://*.amsterdam.nl;
-  font-src 'self' https://static.amsterdam.nl https://fast.fonts.net;
+  connect-src 'self' https://*.amsterdam.nl https://*.usabilla.com;
+  font-src 'self' https://static.amsterdam.nl https://fast.fonts.net https://*.cloudfront.net;
   frame-src 'self' blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io https://vimeo.com https://*.vimeo.com;
   media-src 'self' https://*.data.amsterdam.nl https://*.vimeo.com;
-  img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://data.amsterdam.nl https://*.data.amsterdam.nl https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl https://*.cloudfront.net;
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl https://w.usabilla.com;
-  style-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl https://fast.fonts.net;";
+  img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://data.amsterdam.nl https://*.data.amsterdam.nl https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl https://*.cloudfront.net https://*.usabilla.com;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl https://*.usabilla.com;
+  style-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl https://fast.fonts.net https://*.cloudfront.net;";
