--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["**/*", "**/.eslintrc.js"],
-  "_comment": "explicitly override exclude with nothing, so it will lint test files",
+  "include": ["**/*"],
+  // explicitly override exclude with nothing, so it will lint test files
   "exclude": []
 }
